fix: fixed page being too high

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -34,7 +34,6 @@ header {
 .main {
     display: flex;
     width: 100%;    
-    height: 100vh;
 }
 
 #map {
